# astromol

./: .gitignore  README.md  pyproject.toml  setup.py
astromol/: __init__.py  _version.py  functions.py  json_writer.py  loader.py  molecules.py  references.py  sources.py  telescopes.py
astromol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
astromol/bibtex/: exgal_refs.bib  exo_refs.bib  ice_refs.bib  ppd_refs.bib
astromol/ingest/: asymmetry.py  composition.py  pipeline.py  resolver.py  scaffolder.py
data/: molecules.json  reference_match_review.csv  references.json  sources.json  telescopes.json
